devops/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: bolagetio
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "bolagetio-ipv4"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - secretName: bolagetio-crt-secret-prod
  rules:
  - host: bolaget.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx-svc
          servicePort: 80
  - host: www.bolaget.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx-svc
          servicePort: 80
